# WebConsole

./: .editorconfig  .gitignore  .poggit.yml  README.md  justfile  nginx.conf  plugin.yml
.github/workflows/: build.yml
plugin/: .php-cs-fixer.dist.php  Makefile  composer.json  phpstan-baseline.neon  phpstan.neon.dist  plugin.yml
plugin/api/: composer.json  phpstan.neon.dist
plugin/api/src/: field.php  i18n.php  object.php  registry.php
plugin/internal/: composer.json  phpstan-baseline.neon
plugin/internal/src/: handler.php  http.php  plugin.php
plugin/internal/src/defaults/: group.php  log.php  player.php  world.php
plugin/lib/: .php-cs-fixer.dist.php  composer.json
plugin/lib/src/: default-ids.php  descriptors.php  field-descriptors.php  site-field-metadata.php  site-object-metadata.php  types-base.php  types-pm.php  types.php  util.php
plugin/lib/src/object-descriptors/: event.php  stream.php
plugin/resources/locales/en/: base.ftl  main.ftl
plugin/src/: field.php  handler.php  http.php  mutation.php  object.php  plugin.php  util.php
plugin/src/defaults/: group.php  player.php  world.php
resources/: config.yml
resources/locales/en/: base.ftl  main.ftl
site/: Cargo.toml  index.html  package-lock.json  package.json
site/api-stub/: discovery.yml  en.ftl  locales.yml  package-lock.json  package.json  server.js
site/css/: index.sass
site/src/: api.rs  comps.rs  i18n.rs  lib.rs  main.rs  nav.rs  pages.rs  util.rs
site/src/comps/: inline_value.rs  select_button_group.rs  text_button.rs  watch_loader.rs
site/src/pages/: error.rs  home.rs  info.rs  list.rs
site/src/pages/info/: details.rs  loader.rs
site/src/pages/list/: field_selector.rs  object_list.rs  panel_block.rs
src/SOFe/WebConsole/Api/: AddObjectEvent.php  FieldDef.php  FieldDesc.php  FieldMetadata.php  FieldMutationResponse.php  FieldResponseMetadata.php  FieldType.php  (+10 more)
(+847 files in other folders)
