[package]
name = "site"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.68"
console_error_panic_hook = "0.1.7"
defy = { version = "0.1.5" }
fluent = "0.16.0"
futures = "0.3.26"
gloo = { version = "0.8.0", features = ["futures"] }
indexmap = "1.9.2"
js-sys = "0.3.61"
log = "0.4.17"
pin-project = "1.0.12"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.94"
serde_qs = "0.12.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["Navigator", "ReadableStreamDefaultReader"] }
xias = "0.3.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
